--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "nodemon": "^2.0.15"
   },
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "nodemon server.js",
+    "dev-start": "nodemon server.js"
   }
 
 }
